...
        android:orderInCategory="2000"
        android:title="@string/attach_file"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menuActionSend"
        android:icon="@drawable/ic_send_white_24dp"
        android:menuCategory="system"
        android:orderInCategory="2001"
        android:title="@string/send"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuActionIncludePubKey"
        android:icon="@drawable/ic_key_white_24dp"
        android:menuCategory="system"
        android:orderInCategory="2002"
        android:title="@string/include_public_key"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuActionSwitchType"
        android:icon="@drawable/ic_switch_white_24dp"
        android:orderInCategory="100"
        android:title="@string/switch_to_standard_email"
        app:showAsAction="ifRoom" />
</menu>

