...
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tVTitle"
            app:passwordToggleContentDescription="description"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTPassphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
...
            android:layout_height="wrap_content"
            android:text="@string/one_special_character_eg"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/checkedTVOneNumber" />

        <Button
            android:id="@+id/btSetPassword"
            style="@style/AppWidget.Button.Big.SilverWithWhiteText"
            android:layout_width="0dp"
            android:text="@string/set_password"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
...
