...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewAutocompleteBcc" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSetWebPortalPassword"
                style="@style/AppWidget.Button.Big.Orange"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height_small"
                android:layout_gravity="center"
                android:autoSizeMaxTextSize="@dimen/default_text_size_medium"
                android:autoSizeTextType="uniform"
...
