...
    <string name="bad_signature">bad signature</string>
    <string name="only_partially_signed">only partially signed</string>
    <string name="can_not_verify_signature">can\'t verify signature</string>
    <string name="verifying_signature">verifying signature&#8230;</string>
    <string name="not_signed">not signed</string>
    <string name="mixed_signed">mixed signed</string>
    <string name="password_protected_msg_promo">%1$s has sent you a password-encrypted email. Follow this link to open it: %2$s</string>
    <string name="can_not_send_password_protected">Can\'t send message: password-protected</string>
    <string name="tap_to_protect_with_web_portal_password">Tap to protect with web portal Password</string>
    <string name="password_protection_usage_explanation">The recipients will receive a link to read your message on a web portal, where they will need to enter this password.\n\nThey will have access to this message for 180 days.</string>
    <string name="enter_web_portal_password">Enter web portal password</string>
    <string name="set_password">set password</string>
    <string name="warning_about_password_usage">Do not use your Pass Phrase (that you chose during %1$s Setup). Use some other password that you can share with others.\n\nYou are responsible for sharing this password with recipients (use other medium to share the password - not email).</string>
...
